Use dotnet to build template NuGet

--- a/test/NetCoreTool.Template.Test.Utilities/Steeltoe.NetCoreTool.Template.Test.Utilities.csproj
+++ b/test/NetCoreTool.Template.Test.Utilities/Steeltoe.NetCoreTool.Template.Test.Utilities.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsTestProject>false</IsTestProject>
+    <IsPackable>false</IsPackable>
     <RootNamespace>Steeltoe.NetCoreTool.Template.Test.Utilities</RootNamespace>
   </PropertyGroup>
 
