fix boolean expression

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
@@ -9,7 +9,7 @@
     <!--#if (HasDescription) -->
     <Description>$(DescriptionOption)</Description>
     <!--#endif -->
-    <!--#if !(StreamRabbitMqOption) -->
+    <!--#if (!StreamRabbitMqOption) -->
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <!--#endif-->
   </PropertyGroup>
