Add support for generic cloud hosting [#51]

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
@@ -25,6 +25,7 @@
     <FrameworkNetCoreApp21>false</FrameworkNetCoreApp21>
     <HostingAzureSpringCloudOption>false</HostingAzureSpringCloudOption>
     <HostingCloudFoundryOption>false</HostingCloudFoundryOption>
+    <HostingCloudOption>false</HostingCloudOption>
     <LoggingDynamicLoggerOption>false</LoggingDynamicLoggerOption>
     <ManagementEndpointsOption>false</ManagementEndpointsOption>
     <MongoDbDriverVersion>2.8.*</MongoDbDriverVersion>
