--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
@@ -47,7 +47,7 @@
     <PackageReference Include="Steeltoe.CircuitBreaker.Hystrix.MetricsStreamCore" Condition="'$(CircuitBreakerHystrixOption)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.CloudFoundry.Connector.EFCore" Condition="'$(Steeltoe2Connector)' == 'True' AND '$(AnyEfCore)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.CloudFoundry.ConnectorCore" Condition="'$(Steeltoe2Connector)' == 'True' AND '$(AnyEfCore)' != 'True'" Version="$(SteeltoeVersion)" />
-    <PackageReference Include="Steeltoe.Common.Hosting" Condition="'$(HostingCloudFoundryOption)' == 'True'" Version="$(SteeltoeVersion)" />
+    <PackageReference Include="Steeltoe.Common.Hosting" Condition="'$(AnyHosting)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Connector.EFCore" Condition="'$(Steeltoe3Connector)' == 'True' AND '$(AnyEfCore)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Connector.ConnectorCore" Condition="'$(Steeltoe3Connector)' == 'True' AND '$(AnyEfCore)' != 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Discovery.ClientCore" Condition="'$(DiscoveryEurekaOption)' == 'True' AND ('$(Steeltoe2)' == 'True' OR '$(Steeltoe30)' == 'True')" Version="$(SteeltoeVersion)" />
