--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Properties/launchSettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       //#if (FrameworkNet50)
       "launchUrl": "swagger",
       //#else
-      "launchUrl": "api/values",
+      "launchUrl": "weatherforecast",
       //#endif
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -27,7 +27,7 @@
       //#if (FrameworkNet50)
       "launchUrl": "swagger",
       //#else
-      "launchUrl": "api/values",
+      "launchUrl": "weatherforecast",
       //#endif
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
