--- a/src/Steeltoe.NetCoreTool.Templates.csproj
+++ b/src/Steeltoe.NetCoreTool.Templates.csproj
@@ -8,9 +8,11 @@
     <Authors>VMware</Authors>
     <Description>Templates for creating Steeltoe-influenced projects.</Description>
     <PackageTags>dotnet-new;templates;steeltoe</PackageTags>
+    <PackageProjectUrl>https://steeltoe.io</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageIconUrl>https://steeltoe.io/images/transparent.png</PackageIconUrl>
     <NoDefaultExcludes>true</NoDefaultExcludes>
     <TargetFramework>net5.0</TargetFramework>
-
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <ContentTargetFolders>content</ContentTargetFolders>
@@ -19,6 +21,7 @@
   <ItemGroup>
     <Content Include="Content\**\*" Exclude="Content\**\bin\**;Content\**\obj\**" />
     <Compile Remove="**\*" />
+    <None Include="resources\icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
