--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
@@ -36,6 +36,7 @@
     <RedisDriverVersion>3.1.*</RedisDriverVersion>
     <SteeltoeVersionOption>3.1.*</SteeltoeVersionOption>
     <StreamRabbitMqOption>false</StreamRabbitMqOption>
+    <TracingOption>false</TracingOption>
   </PropertyGroup>
 
 </Project>
