--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
@@ -10,7 +10,6 @@
 
   <PropertyGroup>
     <SteeltoeVersion>$(SteeltoeVersionOption)</SteeltoeVersion>
-    <NetCoreApp21Version Condition="'$(FrameworkNetCoreApp21)'">2.1.*</NetCoreApp21Version>
   </PropertyGroup>
   <!--#if (FrameworkNet50) -->
 
@@ -18,23 +17,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.*" />
   </ItemGroup>
   <!--#endif -->
-  <!--#if (FrameworkNetCoreApp21) -->
-
-  <ItemGroup Condition="'$(FrameworkNetCoreApp21)'">
-    <PackageReference Include="Microsoft.AspNetCore" Version="$(NetCoreApp21Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.CookiePolicy" Version="$(NetCoreApp21Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.HttpsPolicy" Version="$(NetCoreApp21Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="$(NetCoreApp21Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="$(NetCoreApp21Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="$(NetCoreApp21Version)" />
-  </ItemGroup>
-  <!--#endif -->
   <!--#if (AnySteeltoe) -->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Condition="'$(ConnectorOAuthOption)' == 'True'" Version="$(AzureOAuthVersion)" />
-    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(HostingAzureSpringCloudOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True' AND '$(Steeltoe3)' == 'True'" Version="2.0.0-preview.1" />
-    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(HostingAzureSpringCloudOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True' AND '$(Steeltoe2)' == 'True'" Version="1.0.0-preview.1" />
+    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(HostingAzureSpringCloudOption)' == 'True' AND '$(Steeltoe3)' == 'True'" Version="2.0.0-preview.1" />
+    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(HostingAzureSpringCloudOption)' == 'True' AND '$(Steeltoe2)' == 'True'" Version="1.0.0-preview.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Condition="'$(AnyEfCore)' == 'True'" Version="$(EntityFrameworkCoreVersion)" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Condition="'$(ConnectorRedisOption)' == 'True'" Version="$(RedisDriverVersion)" />
     <PackageReference Include="MongoDB.Driver" Condition="'$(ConnectorMongoDbOption)' == 'True'" Version="$(MongoDbDriverVersion)" />
@@ -59,7 +47,7 @@
     <PackageReference Include="Steeltoe.Management.CloudFoundryCore" Condition="'$(Steeltoe2ManagementEndpoints)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Management.EndpointCore" Condition="'$(Steeltoe3ManagementEndpoints)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Management.TracingCore" Condition="'$(DistributedTracingOption)' == 'True'" Version="$(SteeltoeVersion)" />
-    <PackageReference Include="Steeltoe.Messaging.RabbitMQ" Condition="'$(MessagingRabbitMqOption)' == 'True' AND '$(Steeltoe31)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True'" Version="$(SteeltoeVersion)" />
+    <PackageReference Include="Steeltoe.Messaging.RabbitMQ" Condition="'$(MessagingRabbitMqOption)' == 'True' AND '$(Steeltoe31)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="System.Data.SqlClient" Condition="'$(ConnectorSqlServerOption)' == 'True'" Version="4.8.*" />
   </ItemGroup>
   <!--#endif -->
