--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -5,7 +5,7 @@ variables:
   - name: major
     value: 0
   - name: minor
-    value: 5
+    value: 0
   - name: patch
     value: 0
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
@@ -25,6 +25,10 @@ stages:
         pool:
           vmImage: ubuntu-latest
         steps:
+          - task: CmdLine@2
+            displayName: 'Set Version'
+            inputs:
+              script: ./setversion.sh $(Build.BuildNumber)
           - task: UseDotNet@2
             displayName: 'Use .NET Core SDK 5.0'
             inputs:
