--- a/src/Content/NetCoreTool.Template.WebApi/FSharp/Dockerfile
+++ b/src/Content/NetCoreTool.Template.WebApi/FSharp/Dockerfile
@@ -4,13 +4,13 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
 WORKDIR /src
-COPY ["Company.WebApplication1.csproj", "."]
-RUN dotnet restore "Company.WebApplication1.csproj"
+COPY ["Company.WebApplication1.fsproj", "."]
+RUN dotnet restore "Company.WebApplication1.fsproj"
 COPY . .
-RUN dotnet build "Company.WebApplication1.csproj" -c Release -o /app
+RUN dotnet build "Company.WebApplication1.fsproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Company.WebApplication1.csproj" -c Release -o /app
+RUN dotnet publish "Company.WebApplication1.fsproj" -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
