Support prerelease package versions

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -8,13 +8,15 @@ variables:
     value: 1
   - name: patch
     value: 0
+  - name: prerelease
+    value: ""
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: true
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 1
   - group: PackageSigningSecrets
 
-name: $(major).$(minor).$(patch)-$(Rev:r)
+name: $(major).$(minor).$(patch)$(prerelease):$(Rev:r)
 
 stages:
   - stage: assemble
