--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,7 +9,7 @@ variables:
   - name: patch
     value: 0
   - name: prerelease
-    value: ""
+    value: "-rc1"
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: true
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
