--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -8,15 +8,13 @@ variables:
     value: 2
   - name: patch
     value: 0
-  - name: prerelease
-    value: "-rc1"
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: true
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 1
   - group: PackageSigningSecrets
 
-name: $(major).$(minor).$(patch)$(prerelease)#$(Rev:r)
+name: $(major).$(minor).$(patch)-$(Rev:r)
 
 stages:
   - stage: assemble
@@ -27,10 +25,6 @@ stages:
         pool:
           vmImage: ubuntu-latest
         steps:
-          - task: CmdLine@2
-            displayName: 'Set Version'
-            inputs:
-              script: ./setversion.sh $(Build.BuildNumber)
           - task: UseDotNet@2
             displayName: 'Use .NET Core SDK 5.0'
             inputs:
