--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -2,19 +2,13 @@ trigger:
   - main
 
 variables:
-  - name: major
-    value: 1
-  - name: minor
-    value: 2
-  - name: patch
-    value: 0
   - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
     value: true
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 1
   - group: PackageSigningSecrets
 
-name: $(major).$(minor).$(patch)-$(Rev:r)
+name: 1.3.0-$(Rev:r)
 
 stages:
   - stage: assemble
