Rename steeltoe-webapi projects so as to be unique

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
@@ -10,7 +10,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Warning",
-      "Company.WebApplication1": "Information"
+      "Company.WebApplication.CS": "Information"
     }
   }
 }
