--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.Development.json
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Information",
-      "Company.WebApplication1": "Debug"
+      "Company.WebApplication.CS": "Debug"
     }
   }
 }
