add Swagger support for FSharp templates (more consistent with CSharp), update Swashbuckle to 6.2.*

--- a/src/Content/NetCoreTool.Template.WebApi/FSharp/Company.WebApplication.FS.fsproj
+++ b/src/Content/NetCoreTool.Template.WebApi/FSharp/Company.WebApplication.FS.fsproj
@@ -10,6 +10,11 @@
   <PropertyGroup>
     <SteeltoeVersion>$(SteeltoeVersionOption)</SteeltoeVersion>
   </PropertyGroup>
+  <!--#if (FrameworkNet50) -->
+    <ItemGroup Condition="'$(FrameworkNet50)'">
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.*" />
+    </ItemGroup>
+  <!--#endif -->
   <!--#if (AnySteeltoe) -->
 
   <ItemGroup>
