--- a/src/Content/NetCoreTool.Template.WebApi/FSharp/Properties/launchSettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/FSharp/Properties/launchSettings.json
@@ -5,7 +5,11 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
+      //#if (FrameworkNet50)
+      "launchUrl": "swagger",
+      //#else
       "launchUrl": "weatherforecast",
+      //#endif
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
