Add support for net6.0 [#73]
Change default framework to net6.0.

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
@@ -11,9 +11,9 @@
   <PropertyGroup>
     <SteeltoeVersion>$(SteeltoeVersionOption)</SteeltoeVersion>
   </PropertyGroup>
-  <!--#if (FrameworkNet50) -->
+  <!--#if (FrameworkNet60 || FrameworkNet50) -->
 
-  <ItemGroup Condition="'$(FrameworkNet50)'">
+  <ItemGroup Condition="'$(FrameworkNet60)' OR '$(FrameworkNet50)'">
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.*" />
   </ItemGroup>
   <!--#endif -->
