Add Steeltoe JSON schema to appsettings

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://steeltoe.io/schema/latest/schema.json",
   //#if (ConfigurationPlaceholderOption)
   "ResolvedPlaceholderFromEnvVariables": "${PATH?NotFound}",
   "UnresolvedPlaceholder": "${SomKeyNotFound?NotFound}",
