Fix net6.0 F# launchUrl test

--- a/src/Content/NetCoreTool.Template.WebApi/FSharp/Properties/launchSettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/FSharp/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      //#if (FrameworkNet50)
+      //#if (FrameworkNet60 || FrameworkNet50)
       "launchUrl": "swagger",
       //#else
       "launchUrl": "weatherforecast",
