--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
@@ -48,7 +48,7 @@
     <PackageReference Include="Steeltoe.Management.EndpointCore" Condition="'$(Steeltoe3ManagementEndpoints)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.Management.TracingCore" Condition="'$(DistributedTracingOption)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="System.Data.SqlClient" Condition="'$(ConnectorSqlServerOption)' == 'True'" Version="4.8.*" />
-    <PackageReference Include="Steeltoe.Messaging.RabbitMQ"Condition="'$(MessagingRabbitMqListener)' == 'True' OR '$(MessagingRabbitMqClient)' == 'True'" Version="$(SteeltoeVersion)" />
+    <PackageReference Include="Steeltoe.Messaging.RabbitMQ" Condition="'$(AnyMessagingRabbitMq)' == 'True'" Version="$(SteeltoeVersion)" />
   </ItemGroup>
   <!--#endif -->
 
