--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -18,7 +18,12 @@ stages:
           vmImage: ubuntu-latest
         steps:
           - task: UseDotNet@2
-            displayName: 'Use .NET Core SDK 6.0'
+            displayName: 'Ensure .NET 8.0 SDK'
+            inputs:
+              packageType: sdk
+              version: 8.0.x
+          - task: UseDotNet@2
+            displayName: 'Ensure .NET 6.0 SDK'
             inputs:
               packageType: sdk
               version: 6.0.x
