--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Dockerfile
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Dockerfile
@@ -1,8 +1,17 @@
+#if (FrameworkNet60)
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
+#endif
+#if (FrameworkNet80)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
+#endif
 WORKDIR /app
 EXPOSE 80
-
+#if (FrameworkNet60)
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
+#endif
+#if (FrameworkNet80)
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
+#endif
 WORKDIR /src
 COPY ["Company.WebApplication.CS.csproj", "."]
 RUN dotnet restore "Company.WebApplication.CS.csproj"
