--- a/test/NetCoreTool.Template.WebApi.Test/Steeltoe.NetCoreTool.Template.WebApi.Test.csproj
+++ b/test/NetCoreTool.Template.WebApi.Test/Steeltoe.NetCoreTool.Template.WebApi.Test.csproj
@@ -11,4 +11,7 @@
     <ProjectReference Include="..\NetCoreTool.Template.Test.Utilities\Steeltoe.NetCoreTool.Template.Test.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNetTestSdkVersion)" />
+  </ItemGroup>
 </Project>
