.Net 8 Templates and Minimal API (#97)
* add net8 target
* use controllers if .net 6
* Minimal API support
* update third party libs versions
* make tests work in Visual Studio tests explorer

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Dockerfile
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Dockerfile
@@ -1,19 +1,31 @@
+#if (FrameworkNet60)
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
+#endif
+#if (FrameworkNet80)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
+#endif
+USER app
 WORKDIR /app
-EXPOSE 80
-
+EXPOSE 8080
+EXPOSE 8081
+#if (FrameworkNet60)
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
+#endif
+#if (FrameworkNet80)
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
+#endif
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Company.WebApplication.CS.csproj", "."]
 RUN dotnet restore "Company.WebApplication.CS.csproj"
 COPY . .
-RUN dotnet build "Company.WebApplication.CS.csproj" -c Release -o /app
+RUN dotnet build "Company.WebApplication.CS.csproj" -c $BUILD_CONFIGURATION -o /app
 
 FROM build AS publish
-RUN dotnet publish "Company.WebApplication.CS.csproj" -c Release -o /app
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "Company.WebApplication.CS.csproj" -c $BUILD_CONFIGURATION -o /app /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENV DOTNET_URLS http://0.0.0.0:80
 ENTRYPOINT ["dotnet", "Company.WebApplication.CS.dll"]
