--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -4,7 +4,7 @@ trigger:
 - main
 
 variables:
-- name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+- name: DOTNET_NOLOGO
   value: true
 - name: DOTNET_CLI_TELEMETRY_OPTOUT
   value: 1
