--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,8 +95,8 @@ jobs:
     - name: Az CLI login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_KEY_VAULT_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_KEY_VAULT_TENANT_ID }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Sign packages
@@ -107,7 +107,7 @@ jobs:
         --azure-key-vault-managed-identity true
         --azure-credential-type "azure-cli"
         --azure-key-vault-url "${{ secrets.AZURE_KEY_VAULT_URL }}"
-        --azure-key-vault-certificate "${{ secrets.AZURE_KEY_VAULT_CERTIFICATE_ID }}"
+        --azure-key-vault-certificate "${{ secrets.AZURE_SIGN_CERTIFICATE_ID }}"
         --description "Steeltoe"
 
     - name: Upload signed packages
@@ -133,8 +133,8 @@ jobs:
     - name: Azure CLI Login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_KEY_VAULT_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_KEY_VAULT_TENANT_ID }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Download signed packages
