--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
         Write-Output "PACKAGE_VERSION_SUFFIX=$versionSuffix" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
     - name: Calculate package version (for branch)
-      if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+      if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' }}
       env:
         BRANCH_NAME: ${{ github.ref_name }}
       shell: pwsh
