Revert "Diagnostic package restore"
This reverts commit 40358294d0018a3a02f87e1a99a950c42b36f841.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Restore packages
-      run: dotnet restore --verbosity diagnostic
+      run: dotnet restore --verbosity minimal
 
     - name: Calculate package version (for release)
       if: ${{ github.event_name == 'release' }}
